main frame scrollbar="auto" fix. (Try again).

--- a/css/front.css
+++ b/css/front.css
@@ -1,5 +1,5 @@
 html,body { 
-	height: 98%; -webkit-font-smoothing: antialiased;
+	height: 96%; -webkit-font-smoothing: antialiased;
 }
 body {
 	background:url(../media/background.png) #222528;
